<resources>
    <string name="app_name">GameHub</string>
    <string name="rpsBasic">RPS Basic</string>
    <string name="rpsPlus">RPS Plus</string>
    <string name="rules">Reglas</string>
    <string name="holdIt">Hold It!</string>
    <string name="slotMachine">Slot Machine</string>
    <string name="slotSaldo">Saldo: 100 €</string>
    <string name="precio">Precio tirada: 10€</string>
    <string name="ticTacToe">Tic Tac Toe</string>
    <string name="salir">Salir</string>
    <string name="ia">IA</string>
    <string name="jugador">Jugador</string>
    <string name="cero">0</string>
    <string name="ganaste">¡Ganaste!</string>
    <string name="perdiste">¡Perdiste!</string>
    <string name="empataste">¡Empate!</string>
    <string name="empezar">¡Empieza!</string>
    <string name="jugador1">oun ɹopɐƃnɾ</string>
    <string name="jugador2">Jugador dos</string>
    <string name="startDemoGame">Play</string>
    <string name="jugador1Gana">¡Jugador 1 Gana!</string>
    <string name="jugador2Gana">¡Jugador 2 Gana!</string>
    <string name="reiniciar">Reiniciar</string>
    <string name="jugadorXGana">¡Jugador X Gana!</string>
    <string name="jugadorOGana">¡Jugador O Gana!</string>
    <string name="jugador1TicTacToe">Jugador X: 0</string>
    <string name="jugador2TicTacToe">Jugador O: 0</string>
    <string name="avTextSlotMachine">AV</string>
    <string name="spinTextSlotMachine">SPIN</string>
</resources>