<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".views.SlotMachine">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20sp">

                <TextView
                    android:id="@+id/tvPrecio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:gravity="center"
                    android:text="@string/precio"
                    android:textColor="@android:color/background_dark"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15sp">

                <TextView
                    android:id="@+id/tvCoin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:gravity="center"
                    android:text="@string/slotSaldo"
                    android:textColor="@android:color/background_dark"
                    android:textSize="25sp"
                    android:layout_weight="1"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="344dp"
                android:layout_height="match_parent"
                android:layout_marginTop="15sp"
                android:background="@color/whiteColor">

                <ImageView
                    android:id="@+id/img1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/slot1" />

                <ImageView
                    android:id="@+id/img2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/slot1" />

                <ImageView
                    android:id="@+id/img3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/slot1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40sp">

                <Button
                    android:id="@+id/btnAv1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_slot_machine_av"
                    android:text="@string/avTextSlotMachine"
                    android:textColor="@color/blackColor"
                    android:textStyle="bold"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnAv2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_slot_machine_av"
                    android:text="@string/avTextSlotMachine"
                    android:textColor="@color/blackColor"
                    android:textStyle="bold"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnAv3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_slot_machine_av"
                    android:text="@string/avTextSlotMachine"
                    android:textColor="@color/blackColor"
                    android:textStyle="bold"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/btnSpin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_slot_machine_spin"
                    android:text="@string/spinTextSlotMachine"
                    android:textColor="@color/blackColor"
                    android:textStyle="bold"
                    android:layout_weight="1" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15sp">

                <ImageButton
                    android:id="@+id/btnVolverJuego7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="3"
                    android:background="@android:color/transparent"
                    android:layout_weight="1"
                    android:onClick="volver"
                    android:src="@drawable/back" />
            </TableRow>

        </TableLayout>
    </ScrollView>
</LinearLayout>