<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".views.HoldIt">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="50sp"
                android:layout_marginBottom="30sp"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/ibPlayer1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/huella" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvPuntuacionJ1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvJugador1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/jugador1"
                    android:textColor="@android:color/background_dark"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvContadorJ5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25sp"
                    android:layout_marginBottom="25sp"
                    android:gravity="center"
                    android:textColor="@android:color/background_dark"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvJugador2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/jugador2"
                    android:textColor="@android:color/background_dark"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvPuntuacionJ2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@android:color/background_dark"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30sp"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/ibPlayer2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    app:srcCompat="@drawable/huella" />
            </TableRow>

            <LinearLayout
                android:id="@+id/lineaDemoGame"
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="25sp"
                android:background="#000000"
                android:orientation="horizontal" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ibVolverDemo"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:onClick="volver"
                    app:srcCompat="@drawable/back" />

                <Button
                    android:id="@+id/btnEmpezarJ5"
                    android:layout_width="wrap_content"
                    android:layout_height="104dp"
                    android:layout_marginTop="15sp"
                    android:layout_weight="1"
                    android:background="@drawable/button_color"
                    android:fontFamily="serif-monospace"
                    android:onClick="startGame"
                    android:text="@string/startDemoGame"
                    android:textColor="#000000"
                    android:textSize="40sp"
                    android:textStyle="bold" />

            </TableRow>

        </TableLayout>
    </ScrollView>
</LinearLayout>