<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".views.RpsBasic">

    <ScrollView
        android:id="@+id/scrollViewBasic"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvIaBasic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:fontFamily="serif-monospace"
                    android:gravity="center"
                    android:text="@string/ia"
                    android:textColor="#DCD6C9"
                    android:textSize="42sp"
                    android:layout_weight="1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvIaMarcadorBasic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25sp"
                    android:text="@string/cero"
                    android:textColor="@android:color/black"
                    android:textSize="35sp"
                    android:layout_weight="1"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivIaSelectBasic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:src="@drawable/interrogacion" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvJugadorBasic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:fontFamily="serif-monospace"
                    android:gravity="center"
                    android:text="@string/jugador"
                    android:textColor="@color/textColor"
                    android:textSize="42sp"
                    android:layout_weight="1"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvJugadorMarcadorBasic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25sp"
                    android:text="@string/cero"
                    android:textColor="@android:color/black"
                    android:textSize="35sp"
                    android:layout_weight="1"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivJugadorSelectBasic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_span="2"
                    android:src="@drawable/interrogacion" />
            </TableRow>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10sp"
                android:background="#000000"
                android:orientation="horizontal" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ibPiedraBasic"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:tag="Piedra"
                    android:onClick="seleccionJugador"
                    android:src="@drawable/piedra" />

                <ImageButton
                    android:id="@+id/ibPapelBasic"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20sp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:tag="Papel"
                    android:onClick="seleccionJugador"
                    android:src="@drawable/papel" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/ibTijeraBasic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="@android:color/transparent"
                    android:tag="Tijera"
                    android:onClick="seleccionJugador"
                    android:layout_gravity="center"
                    android:src="@drawable/tijeras" />

            </TableRow>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="3dp"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="10sp"
                android:background="#000000"
                android:orientation="horizontal" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ibVolverBasic"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:onClick="volver"
                    android:src="@drawable/back" />

                <ImageButton
                    android:id="@+id/ibReiniciarBasic"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15sp"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:onClick="reiniciar"
                    android:src="@drawable/reset" />
            </TableRow>

        </TableLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>